--- a/src/app/Template/pg-register/pg-register.component.css
+++ b/src/app/Template/pg-register/pg-register.component.css
@@ -1,3 +1,34 @@
+@import "../../../assets/styles/layout.css";
+
+.card-wrapper {
+  position: relative;
+  padding-top: 80px; /* Espacio para el logo */
+}
+
+.logo-wrapper {
+  top: -80px; /* Ajusta según la altura del logo */
+  left: 50%;
+  transform: translateX(-50%);
+}
+/*
+.floating-invalid-feedback {
+  position: absolute;
+  background-color: rgba(255, 0, 0, 0.8); 
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  z-index: 10;  
+  margin-top: 5px;
+  left: 0;
+  width: 100%;
+  transform: translateY(-100%);
+} */
+
+.form-group {
+  position: relative; /* Necesario para que los mensajes flotantes se posicionen correctamente */
+  /* margin-bottom: 1.5rem; Espacio suficiente para los mensajes */
+}
+
 /**
 * Template Name: NiceAdmin
 * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
