--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
@@ -73,18 +73,18 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
 
-    <div class="container">
+    <div class="container" style="margin-left: 90px;">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>¡Transforma tus residuos en recompensas con GreenPoint!</h1>
-          <h2>En GreenPoint, creemos en un mundo más verde y sostenible</h2>
-          <div class="d-flex justify-content-center justify-content-lg-start">
+          <h1 style="font-size: 45px;">¡Transforma tus residuos en recompensas con GreenPoint!</h1>
+          <h2>En GreenPoint, creemos en un mundo <br> más verde y sostenible</h2>
+          <div class="d-flex justify-content-center justify-content-lg-start" style="margin-top: -40px;">
             <a href="#about" class="btn-get-started scrollto">Comenzar</a>
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Puntos Verdes</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="" width="400px" style="margin-left: 80px;">
+          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="" width="400px" style="margin-left: 30px;">
         </div>
       </div>
     </div>
@@ -312,7 +312,7 @@
           <li data-filter=".filter-card">Card</li>
           <li data-filter=".filter-web">Web</li>
         </ul>
-
+        <!--
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -324,7 +324,7 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -332,7 +332,7 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -372,7 +372,7 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -382,7 +382,7 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -392,7 +392,7 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -402,9 +402,9 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
         </div>
-
+        -->
       </div>
     </section><!-- End Portfolio Section -->
 
