--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -64,7 +64,7 @@
     
                 <div class="logo-wrapper position-absolute d-flex justify-content-center py-4" style="top: -100px; z-index: 100;">
                   <a href="">
-                    <img src="assets/img/hero-img.png" alt="" width="auto" height="100px" style="z-index: 100;">
+                    <img src="assets/img/logo.png" alt="" width="auto" height="100px" style="z-index: 100;">
                   </a>
                 </div><!-- End Logo -->
     
